netlify.toml updated

--- a/client/netlify.toml
+++ b/client/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm install $NPM_FLAGS && npm run build"
+  command = "rm -rf node_modules && rm package-lock.json && npm install $NPM_FLAGS && npm run build"
   publish = "build"
 
 [build.environment]
