--- a/client/package.json
+++ b/client/package.json
@@ -39,13 +39,14 @@
     "lodash": "^4.17.21",
     "mdb-react-ui-kit": "^7.2.0",
     "prop-types": "^15.8.1",
-    "react": "^18.2.0",
+    "react": "18.2.0",
     "react-avatar-editor": "^13.0.2",
     "react-datepicker": "^6.6.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.0.1",
     "react-multi-carousel": "^2.8.4",
+    "react-native": "0.74.2",
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.1.0",
     "react-responsive": "^10.0.0",
@@ -62,8 +63,10 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.1.1",
+    "@rollup/pluginutils": "^5.1.0",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
+    "@vitejs/plugin-react": "^4.3.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.18",
     "eslint": "^8.57.0",
@@ -75,6 +78,8 @@
     "postcss": "^8.4.35",
     "sass": "^1.71.1",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.1.6"
+    "vite": "^5.1.6",
+    "vite-plugin-compression": "^0.5.1",
+    "webpack-obfuscator": "^3.5.1"
   }
 }
