--- a/client/package.json
+++ b/client/package.json
@@ -80,6 +80,7 @@
     "tailwindcss": "^3.4.1",
     "vite": "^5.1.6",
     "vite-plugin-compression": "^0.5.1",
+    "webpack": "^5.92.1",
     "webpack-obfuscator": "^3.5.1"
   }
 }
